<resources>
    <string name="app_name">Socialert</string>
    <string name="navigation_drawer_title_1">Task planen</string>
    <string name="navigation_drawer_title_2">Automatische Antwort</string>
    <string name="navigation_drawer_preferences">Einstellungen</string>

    <string name="menu_schedule_task">Task planen</string>
    <string name="menu_auto_reply">Automatische Antwort</string>
    <string name="menu_preferences">Einstellungen</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_blank_fragment">dummy</string>
    <string name="text_tab_ongoing_tasks">Laufende Tasks</string>
    <string name="text_tab_completed_tasks">Abgeschlossene Tasks</string>
    <string name="new_task_dialog_title">Aktion wählen</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="navigation_drawer_open">Navigation Drawer öffnen</string>
    <string name="navigation_drawer_close">Navigation Drawer schließen</string>
    <string name="content_description_end_icon">Kontakt auswählen</string>
    <string name="content_description_end_icon_add_number">Telefonnummer hinzufügen</string>
    <string name="label_contact_number">Telefonnummer</string>
    <string name="label_contact_email">Email</string>
    <string name="label_message">Nachrichtentext</string>
    <string name="label_subject">Betreff</string>
    <string name="textview_variables">Variablen</string>
    <string name="variable_location">Standort</string>
    <string name="variable_address">Adresse</string>
    <string name="change_account">Ändern</string>
    <string name="tv_account">Absender: </string>
    <string name="channel_name">SocialertNotificationChannel</string>
    <string name="channel_description">Sends notification whenever a task has finished</string>
</resources>