<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_baseline_close_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dialog_fragment_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_account"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_addContact"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_contact_email"
                        app:endIconContentDescription="@string/content_description_end_icon"
                        app:endIconDrawable="@drawable/ic_baseline_person_24"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_addContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <!-- Beispielchips
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip6"
                            style="@style/Widget.MaterialComponents.Chip.Entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fire" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip7"
                            style="@style/Widget.MaterialComponents.Chip.Entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Water" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip8"
                            style="@style/Widget.MaterialComponents.Chip.Entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Psychic" />
                        -->
                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_subject"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_subject">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_subject"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_message"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_message">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:text="@string/textview_variables"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_location"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/variable_location"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/btn_address"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/variable_address"
                            android:textAllCaps="false" />
                    </LinearLayout>

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner" />


                </LinearLayout>
            </ScrollView>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>